--- a/frontend/src/budget/Budget.css
+++ b/frontend/src/budget/Budget.css
@@ -1,27 +1,20 @@
 /* BudgetPage.css */
 
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-}
-
 .budget-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 20px;
+    margin: 30px;
 }
 
 .budget-form-container {
     background: #ffffff;
     width: 100%;
-    max-width: 600px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
 }
 
 h2 {
@@ -41,6 +34,7 @@ h3 {
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
+    padding-right: 30px;
 }
 
 .input-group label {
@@ -50,6 +44,7 @@ h3 {
 }
 
 .input-group input {
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
