--- a/frontend/src/login/Login.css
+++ b/frontend/src/login/Login.css
@@ -4,6 +4,12 @@
     background-color: #f0f4f8;
 }
 
+.login-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .input-container {
     font-family: Arial, sans-serif;
     background-color: #f0f4f8;
@@ -11,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex:1;
 }
 
 .login-form {
