--- a/frontend/src/budget/Budget.css
+++ b/frontend/src/budget/Budget.css
@@ -1,75 +1,92 @@
-/* BudgetPage.css */
-
-.budget-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin: 30px;
+.budget-management {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    color: #333;
 }
 
-.budget-form-container {
-    background: #ffffff;
-    width: 100%;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
+.title-budget {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
 }
 
-h3 {
-    margin-top: 20px;
-    font-size: 18px;
-    color: #333;
+.budget-overview {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
 }
 
-.input-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-    padding-right: 30px;
-}
-
-.input-group label {
-    font-size: 14px;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.input-group input {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.budget-button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
+.total-budget {
     font-weight: bold;
-    color: #fff;
-    background-color: #333;
-    border: none;
+    margin-bottom: 10px;
+}
+
+.progress-bar-budget {
+    background-color: #e0e0e0;
+    height: 10px;
     border-radius: 5px;
+    margin: 10px 0;
+    overflow: hidden;
+}
+
+.progress-bar-filled-budget {
+    background-color: #4caf50;
+    height: 100%;
+    transition: width 0.3s ease;
+}
+
+.budget-breakdown {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.budget-breakdown li {
+    margin: 5px 0;
+}
+
+.remaining-budget {
+    font-weight: bold;
+    color: green;
+    margin-top: 10px;
+}
+
+.form-budget {
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+}
+
+.form-budget h3 {
+    margin-bottom: 10px;
+}
+
+.input-budget {
+    width: calc(100% - 30px);
+    padding: 8px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    display: block;
+}
+
+.button-budget {
+    background-color: #131313;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s ease;
 }
 
-.budget-button:hover {
-    background-color: #555;
+.button-budget:hover {
+    background-color: #4d4c4c;
 }
 
-@media (max-width: 768px) {
-    .budget-form-container {
-        width: 90%;
-    }
+.button-budget:disabled {
+    background-color: #4d4c4c;
 }
